@@ -1,4 +1,5 @@
 0.07
+ - Update .travis.yml to reality.
 
 0.06 2020-01-19T17:11:24+01:00
  - Fix Makefile.PL fails with no '.' in @INC.
